paas/gitops/pgadmin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  annotations:
    argocd.argoproj.io/sync-wave: "1"
