paas/gitops/pgadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
      argocd.argoproj.io/sync-wave: "5"
  labels:
    app: pgadmin
    manifest-kind: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
      name: pgadmin
    spec:
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
      containers:
        - image: jfrog.uk.ngridtools.com/public-proxy-dockerhub/dpage/pgadmin4:7.0
          imagePullPolicy: Always
          name: pgadmin
          serviceName: pgadmin-service
          securityContext:
            allowPrivilegeEscalation: true
          resources:
            limits:
              memory: 2Gi
              cpu: 1000m
            requests:
              memory: 2Gi
              cpu: 1000m
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
          terminationMessagePolicy: File
