paas/gitops/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: pgadmin-service
  namespace: pgadmin
  labels:
    app: pgadmin
spec:
 ports:
 - name: http
   protocol: TCP
   port: 80
   targetPort: 80
 selector:
   app: pgadmin
 type: ClusterIP
